--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "axios-hooks": "^3.0.0",
+    "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -15,6 +16,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "json-server": "npx json-server --watch src/db.json --port 3030",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
